<resources>
    <string name="app_name">TPW</string>
    <string name="app">The Perfect Workout</string>
    <string name="title_home">Home</string>
    <string name="title_tips">Tips</string>
    <string name="title_settings">Settings</string>
    <string name="diet">Diet</string>
    <string name="spotify">Playlist Spotify</string>
    <string name="myworkout">My Workout</string>

    <string name="settings">Settings</string>
    <string name="about_title">About</string>
    <string name="signout">Sign Out</string>
    <string name="about">Thank you to Lori, Patricia, Oleg and Philippe.</string>
    <string name="reset_password">Reset password by email</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Sign Up</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your email to sent you password reset instructions.</string>

    <string name="addTo">Add to your workout</string>
    <string name="play_playlist">Play playlist</string>

</resources>
